--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10903,6 +10903,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   height: 100%;
+  overflow-y: scroll;
 }
 body [data-visible=loggedIn] {
   display: none;
